breakv4v2: new graal